--- a/apx-rpms.tex
+++ b/apx-rpms.tex
@@ -4,19 +4,19 @@
 The \cvmfs\ software is available in form of several RPM packages:
 \begin{description}
 	\item[cvmfs-release] Adds the \cvmfs\ yum repository.
-	\item[cvmfs-keys] Contains the public key for signature verification of repositories in the cern.ch domain.
-	\item[cvmfs] Contains the Fuse module and additional client tools.  It has dependencies to cvmfs-keys, fuse, and autofs.
+	\item[cvmfs-config-cern] Contains the configuration parameters and public keys for nodes in the Worldwide LHC Computing Grid (\ie for repositories in the cern.ch domain).
+	\item[cvmfs-config-egi] Contains the configuration parameters and public keys for nodes in the European Grid Infrastructure.  It depends on cvmfs-config-cern.
+	\item[cvmfs-config-none] Empty package to satisfy the cvmfs-config requirement of the cvmfs package without actually installing any configuration.
+	\item[cvmfs] Contains the Fuse module and additional client tools.  It has dependencies to at least one of the cvmfs-config-$\cdots$ packages.
 	\item[cvmfs-devel] Contains the \texttt{libcvmfs.a} static library and the \texttt{libcvmfs.h} header file for use of \cvmfs\ with Parrot\cite{parrot05}.
-	\item[cvmfs-init-scripts] Contains special settings for some of the repositories.
-		For instance, the ATLAS nightly builds are provided by a URL other than the other repositories in cern.ch.
-		Depends on cvmfs.
 	\item[cvmfs-auto-setup] Only available through yum. 
 		This is a wrapper for \texttt{cvmfs\_config setup}. 
 		This is supposed to provide automatic configuration for the ATLAS Tier3s.
 		Depends on cvmfs.
 	\item[cvmfs-server] Contains the \cvmfs\ server tool kit for maintaining Stratum~0 and Stratum~1 servers.
-		Depends on cvmfs-keys and httpd.
 	\item[kernel-$\cdots$-.aufs21] Scientific Linux 6 kernel with aufs.
 		Required for SL6 based Stratum~0 servers.
+	\item[kernel-$\cdots$-.aufs3] Scientific Linux 7 kernel with aufs.
+		Required for SL7/CC7 based Stratum~0 servers.
 	\item[cvmfs-unittests] Contains the \texttt{cvmfs\_unittests} binary.  Only required for testing.
 \end{description}
