add new stratum 1s to acl recommendation

--- a/cpt-squid.tex
+++ b/cpt-squid.tex
@@ -40,6 +40,12 @@ For the Stratum 1 servers for the cern.ch domain, add the following lines to you
   acl cvmfs dst cvmfs02.grid.sinica.edu.tw
   acl cvmfs dst cvmfs.fnal.gov
   acl cvmfs dst cvmfs-atlas-nightlies.cern.ch
+  acl cvmfs dst cvmfs-egi.gridpp.rl.ac.uk
+  acl cvmfs dst klei.nikhef.nl
+  acl cvmfs dst cvmfsrepo.lcg.triumf.ca
+  acl cvmfs dst cvmfsrep.grid.sinica.edu.tw
+  acl cvmfs dst cvmfs-s1bnl.opensciencegrid.org
+  acl cvmfs dst cvmfs-s1fnal.opensciencegrid.org
   http_access allow cvmfs
 \end{verbatim}
 
