--- a/cpt-configure.tex
+++ b/cpt-configure.tex
@@ -102,13 +102,17 @@ The so defined URLs are organized as a ring buffer.
 Whenever download of files fails from a server, \cvmfs\ automatically switches to the next mirror server.
 For repositories under the cern.ch domain, the Stratum 1 servers are specified in /etc/cvmfs/domain.d/cern.ch.conf.
 
-It is recommended to adjust the order of Stratum 1 server so that the closest servers are used with priority.
-For roaming clients (\ie clients not using a proxy server), the Stratum 1 servers can be automatically sorted according to round trip time by \texttt{cvmfs\_talk host probe} (see Section~\ref{sct:tools}).
+It is recommended to adjust the order of Stratum 1 servers so that
+the closest servers are used with priority.  This can be done
+automatically by using geographic ordering (see Section~\ref{sct:geoapi}).
+Alternatively, for roaming clients (\ie clients not using a proxy server),
+the Stratum 1 servers can be automatically sorted according to round trip
+time by \texttt{cvmfs\_talk host probe} (see Section~\ref{sct:tools}).
 Otherwise, the proxy server would invalidate round trip time measurement.
 
 The special sequence \texttt{@org@} in the \texttt{CVMFS\_SERVER\_URL} string is replaced by the repository name (not fully qualified).
 That allows to use the same parameter for many repositories hosted under the same domain.
-For instance, \texttt{http://cvmfs-stratum-one.cern.ch/opt/@org@} can resolve to \url{http://cvmfs-stratum-one.cern.ch/opt/atlas}, \url{http://cvmfs-stratum-one.cern.ch/opt/cms}, and so on depending on the repository that is being mounted.
+For instance, \url{http://cvmfs-stratum-one.cern.ch/opt/@org@} can resolve to \url{http://cvmfs-stratum-one.cern.ch/opt/atlas}, \url{http://cvmfs-stratum-one.cern.ch/opt/cms}, and so on depending on the repository that is being mounted.
 The same works for the sequence \texttt{@fqrn@} with fully qualified repository names (\eg atlas.cern.cn, cms.cern.ch, \dots).
 
 \subsection{Proxy Lists}
@@ -139,6 +143,29 @@ PAC files can be on a file system or accessible via HTTP.
 \cvmfs\ looks for PAC files in the order given by the semicolon separated URLs in the \texttt{CVMFS\_PAC\_URLS} environment variable.
 This variable defaults to \url{http://wpad/wpad.dat}.
 The \texttt{auto} keyword used as a URL in \texttt{CVMFS\_PAC\_URLS} is resolved to \url{http://wpad/wpad.dat}, too, in order to be compatible with Frontier.
+
+\subsection{Fallback Proxy List}
+In addition to the regular proxy list set by \texttt{CVMFS\_HTTP\_PROXY},
+a fallback proxy list is supported in \texttt{CVMFS\_FALLBACK\_PROXY}.
+The syntax of both lists is the same.  The fallback proxy list is
+appended to the regular proxy list, and if the fallback proxy list
+is set, any DIRECT is removed from both lists.  The automatic proxy
+configuration of the previous section only sets the regular proxy list,
+not the fallback proxy list.  Also the fallback proxy list can be
+automatically reordered; see the next section.
+
+\subsection{Ordering of Servers according to Geographic Proximity}
+\label{sct:geoapi}
+\cvmfs\ Stratum 1 servers provide a RESTful service for geographic
+ordering.  Clients can request 
+\url{http://<HOST>/cvmfs/<FQRN>/api/v1.0/geo/<proxy_address>/<server_list>}.
+The proxy address can be replaced by a UUID if no proxies are used,
+and the \cvmfs\ client does that if there are no regular proxies.
+The server list is comma-separated.  The result is an ordered list
+of indexes of the input host names.  Use of this API can be enabled
+in a \cvmfs\ client with \texttt{CVMFS\_USE\_GEOAPI=yes}.  That will
+geographically sort both the servers set by \texttt{CVMFS\_SERVER\_URL}
+and the fallback proxies set by \textt{CVMFS\_FALLBACK\_PROXY}.
 
 \subsection{Timeouts}
 \cvmfs\ tries to gracefully recover from broken network links and temporarily overloaded paths.
