add label for named snapshot section

--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -264,6 +264,7 @@ Optionally \texttt{cvmfs\_server check} can also verify the data integrity (comm
 However this is a time consuming process and we recommend it only for diagnostic purposes.
 
 \subsection{Manage Named Snapshots}
+\label{sct:namedsnapshots}
 
 At the point of publishing, the resulting snapshot can be named.
 To do so, use the -a option like
