--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -263,47 +263,36 @@ Where this is not affordable due to the size of the repositories, run the integr
 Optionally \texttt{cvmfs\_server check} can also verify the data integrity (command line flag \texttt{-i}) of each data object in the repository.
 However this is a time consuming process and we recommend it only for diagnostic purposes.
 
-\subsection{Manage Named Snapshots}
+\subsection{Named Snapshots}
+Named snapshots or \emph{tags} are an easy way to organise checkpoints in the file system history.
+This allows file system content rollbacks to previously created and tagged revisions.
+Also \cvmfs\ clients can explicitly mount a repository at a specific named snapshot to expose the file system content published with this tag.
 
-At the point of publishing, the resulting snapshot can be named.
-To do so, use the -a option like
+Note that tag names need to be unique for each repository and are not allowed to contain spaces or spacial characters.
+Besides the actual tag's name they can also contain a free descriptive text and store a creation timestamp.
+
+\subsubsection{Creating a Named Snapshot}
+Tags can be added while publishing a new file system revision.
+For that the -a and -m options for \texttt{cvmfs\_server publish} are used.
+Publishing a \cvmfs\ revision like this will produce a new revision that is tagged as ``release-1.0'': 
 \begin{verbatim}
 cvmfs_server transaction
 # Changes
-cvmfs_server publish -a release-1.0
+cvmfs_server publish -a release-1.0 -m "first stable release"
 \end{verbatim}
 
-As a tag name, use an identifier without spaces and special characters.
-You can list all named snapshots by
-\begin{verbatim}
-cvmfs_server list-tags
-\end{verbatim}
+\subsubsection{Managing Existing Named Snapshots}
+Managing existing tags is done by using the \texttt{cvmfs\_server tag} command.
+Without any command line parameters, it will print all currently available named snapshots.
+Snapshots can be inspected (\texttt{-i <tag name>}), removed (\texttt{-r <tag name>}) or created (\texttt{-a <tag name> -m <tag description> -h <catalog root hash>}).
+Furthermore machine readable modes for both listing (\texttt{-l -x}) as well as inspection (\texttt{-i <tag name> -x}) is available.
 
-In order to remove (unpublish) a named snapshot, use the -r option like
-\begin{verbatim}
-cvmfs_server transaction
-cvmfs_server publish -r release-1.0
-\end{verbatim}
-
-Use named snapshots whenever you do larger modifications to the repository, for instance when you install a new major software release.
-Only with named snapshots do you have the ability to easily undo modifications and to preserve the state of the file system for the future.
-Nevertheless, do not use named snapshots excessively.
-Start cleaning up unnecessary snapshots once you have more than $\approx 50$.
-
-\subsection{Rollbacks}
-
-You can rollback your repository to any of the named snapshots.
+\subsubsection{Rollbacks}
+A repository can be rolled back to any of the named snapshots.
 Technically, this means that the given snapshot is re-published, while all intermediate snapshots are removed from the history.
-
-In order to rollback, do
-\begin{verbatim}
-cvmfs_server transaction
-cvmfs_server rollback -t release-1.0
-\end{verbatim}
-
 A rollback is, like restoring from backups, not something you would do often.
 Use caution.
-A rollback is irreversible.
+Rolling back is achieved through the command \texttt{cvmfs\_server rollback -t release-1.0}
 
 \subsection{Manage Nested Catalogs}
 
