add cvmfs version

--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -41,7 +41,8 @@
 
 \begin{document}
 \selectlanguage{english}
-\renewcommand\today{April 2014}
+\renewcommand\today{February 2015}
+\newcommand\cvmfsversion{2.1.20}
 
 \pagestyle{empty}
 \begin{titlepage}
@@ -62,7 +63,7 @@
 	    			%\large PH-SFT%\\[0.5cm]
 			}
 		}
-		\vspace*{2.5cm}
+		\vspace*{2cm}
  
   		%{\large \scshape PH-SFT}\\[0.5cm]
   		\HRule\\[0.4cm]
@@ -71,16 +72,15 @@
 		
 		\includegraphics[height=4cm]{figures/cvmfs}\\[1.5cm]
   
-		\large Jakob Blomer \qquad Predrag Buncic \qquad Dave Dykstra \qquad Ren\'e Meusel\\[0.4cm]
-		\url{jblomer@cern.ch}
+		\large Jakob Blomer \qquad Predrag Buncic \qquad Dave Dykstra \qquad Ren\'e Meusel\\[0.5cm]
+		\url{jblomer@cern.ch}\\[0.5cm]
 		%\today
   
   		\vfill
-		 \large Revision ---VERSION---\\[1ex]
+		 \large Refers to CernVM-FS \cvmfsversion\\Revision ---VERSION---\quad\today\\[0.5cm]
   
 		\vfill
-		\large Technical Report\\
-	         \today
+		\large Technical Report
 		%	\large ISSN 1234-5678	
 
   		\setlength{\parindent}{\saveparindent}
